[metadata]
name = cave_miner
version = 1.8.0
author = DENIAU Antonin
author_email = antonin.deniau@protonmail.com
url = https://github.com/Antonin-Deniau/cave_miner
description = Search for code cave in all binaries
long_description = file: README.rst
keywords = codecave hacking injection
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: System
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

requires = kaitaistruct

[options.packages.find]
exclude = contrib, docs, tests

[entry_points.console_scripts]
cave_miner = cave_miner.__main__:main

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires = setuptools_scm; docopt==0.6.2; kaitaiStructCompile;
dependency_links = dependency_links = ["git+https://github.com/KOLANICH/kaitaiStructCompile.py.git"]

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel", "kaitaiStructCompile"]